# wirecat

./: Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  release.yml
scripts/: generate-formula.sh
src/: app.rs  capture.rs  http.rs  main.rs  model.rs  parser.rs  ssl_proxy.rs  ui.rs
