[package]
name = "wirecat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
ratatui = "0.29"
rustls-pemfile = "2.2"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
